--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="med-card" id="med-card">
           <img src="./Image/ayurved.jfif" alt="HOMO" />
           <div class="med-container">
-            <h1>Ayervadic</h1>
+            <h1>Ayurvedic</h1>
             <p>
               A medical system from India that has been used for thousands of
               years. The goal is to cleanse the body and to restore balance to
