--- a/register.html
+++ b/register.html
@@ -126,6 +126,6 @@
           </div>
         </footer>   
         <!-- Footer ends -->
-        <script src="./register.js"></script>
+        <script src="./Scripts/register.js"></script>
   </body>
 </html>
