--- a/finallogin.html
+++ b/finallogin.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In - Alternative Medicine </title>
-    <link href="./finallogin.css" rel="stylesheet"/>
-    <script src="./finallogin.js"></script>
+    <link href="./Styles/finallogin.css" rel="stylesheet"/>
+    
     <link rel="tab icon" href="./Image/favicon.ico">
 </head>
 <!-- Main begins -->
@@ -99,5 +99,6 @@
       </div>
     </footer>   
     <!-- Footer ends -->
+    <script src="./Scripts/finallogin.js"></script>
 </body>
 </html>
