--- a/cart.html
+++ b/cart.html
@@ -70,7 +70,7 @@
             <h3 id="tax">Tax @ 13%</h3> &nbsp; <span></span> <br/>
             <h3 id="total">Total</h3> &emsp;&emsp;&emsp; <span></span> <br/>
 
-            <button >Buy</button>
+            <button ><a href="./invoice1.html"></a></button>
 
         </div>
         
