--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <nav>
-      <a href="./Home.html"><img src="./Image/logo.png" alt="Logo of alternative medicines" /></a>
+      <a href="./index.html"><img src="./Image/logo.png" alt="Logo of alternative medicines" /></a>
       <buttton class="hamburger" id="hamburger">
         <i class="fas fa-bars"></i>
       </buttton>
